src/index.css
body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.Profile {
    width: 600px;
    height: 280px;
    gap: 0px 0px;
    position: relative;
    display: flex;
    margin: 30px 0 0 70px;
}

.Profile>#Profile_Picture {
    position: relative;
    margin-bottom: 100px;
    top: 40px;
    border: 1px solid black;
    border-radius: 75%;
    width: 200px;
    height: 200px;
}

.Profile>.Content {
    position: relative;
    margin: 40px 0 0 50px;
}

#profile_content>h1 {
    font-size: 32px;
    text-align: left;
    margin: 0;
}

#profile_content>p {
    font-size: 18px;
    font-weight: 100;
    font-style: italic;
    text-align: left;
    margin: 15px auto 25px auto;
}

#profile_content>button:first-of-type {
    background: #9BADF2;
    border: none;
    border-radius: 20px;
    width: 150px;
    font-size: 19px;
    padding: 5px;
    color: white;
    margin-right: 20px;
}

#profile_content>button:nth-of-type(2) {
    background: white;
    border: 1px solid #9BADF2;
    border-radius: 20px;
    width: 150px;
    font-size: 19px;
    padding: 5px;
    color: #9BADF2;
    margin-right: 20px;
}

img {
    width: 100px;
    height: 100px;
}

.Education {
    display: flex;
    flex-direction: column;
    width: 500px;
    height: auto;
    margin: 0px 0 0 70px;
}

.Education>h1 {
    text-align: left;
    margin: auto auto 22px 0;
}

.Education>.EduSection {
    margin: auto auto 22px 30px;
    display: flex;
}

.EduSection>img {
    float: left;
    margin: 0;
}

.EduSection>.Content {
    margin-left: 10px;
}

.EduSection>.Content>h1 {
    font-size: 18px;
    font-weight: 500;
    text-align: left;
    margin: 5px 0 5px 0;
}

.EduSection>.Content>p:first-of-type {
    font-weight: 400;
    color: #7b6f6fc7;
    text-align: left;
    margin: 5px 0 5px 0;
}

.EduSection>.Content>p:nth-of-type(2) {
    font-weight: 400;
    color: #7b6f6f63;
    text-align: left;
    margin: 5px 0 5px 0;
}

.vl {
    position: absolute;
    border-left: 6px solid black;
    top: 80px;
    height: 480px;
    width: 1px;
    background: red;
    margin-left: 10px;
}

.Experiance {
    position: relative;
    width: 500px;
    height: 230px;
    display: flex;
    flex-direction: column;
    margin-left: 70px;
}

.Experiance>h1 {
    text-align: left;
    font-size: 32px;
}

.ExpSection {
    position: relative;
    display: flex;
    margin: 35px 0 0 0;
}

.ExpSection>#dot {
    width: 20px;
    height: 20px;
    background: white;
    border-radius: 75%;
    border: 10px solid black;
    margin: auto 0 auto -5px;
}

#dot>hr {
    position: relative;
    width: 41px;
    margin: 5px 0 auto 29px;
    border: 5px solid black;
}

.ExpSection>.Picture {
    margin: auto 0 auto 50px;
    border: 2px solid black;
    border-radius: 10px;
}

.ExpSection>.Content {
    margin: auto 0 auto 0;
}

.ExpSection>.Content>p:first-of-type {
    color: #7B6F6F;
    margin: auto 0 auto 30px;
    text-align: left;
}

.ExpSection>.Content>h1 {
    margin: 5px 0 auto 30px;
    font-weight: 500;
    font-size: 18px;
    text-align: left;
}

.ExpSection>.Content>p {
    color: #7B6F6F;
    margin: 5px 0 auto 30px;
    text-align: left;
    font-weight: 400;
}

